2017-04-25  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Adapted the typhon stylesheet to fit well with the changing
	defaults in matplotlib 2.0.

	* typhon/plots/stylelib/typhon-classic.mplstyle:

	The old typhon stylesheet.

	* typhon/plots/stylelib/typhon-fullcycler.mplstyle,
	  typhon/plots/stylelib/typhon-geometry.mplstyle:

	Removed the separate geoemetry and color-cycler as they are
	probably unused.

	* doc/pyplots/stylesheet_gallery.py:

	Modified the test script for better appearance.

	Plot more lines to show the cycling through linestyles even
	when using the larger color-cycler in matplotlib 2.0.

	* typhon/math/common.py (nlogspace): Added example.

	* typhon/plots/plots.py: Removed forgotten debug `print()`.

2017-04-24  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py:

	* (HectoPascalFormatter, HectoPascalLogFormatter):

	Added two Formatter to create labels for profile plots.

	* (profile_p, profile_p_log): Use newly implemented Formatter.

	* doc/typhon.plots.rst: Added Formatter to documentation.

2017-04-19  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/__init__.py(concat_each_time_coordinate):

	- Do not lose attributes, please.

2017-04-19  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:
	
	(Dataset.add_gran_to_data):

	- Always load contents
	- Fix bug when too many files are empty

	(NetCDFDataset._read):

	- When returning xarray dataset, subselect fields as required.
	Pseudo-fields still not supported.

	(HomemadeDataset._read):

	- Make sure we delegate the .read(...) method fields argument.


2017-04-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/tests, typhon/math/tests/test_math.py:

	Added tests for most common math functions.

2017-04-18  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/internals.py: Added and moved internal classes over
	
	* typhon/arts/utils.py: Moved as_quantumnumbers here
	